--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CST438_Project03_Group03</string>
+    <string name="app_name">Choice</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -14,7 +14,6 @@
     <string name="name">Name</string>
     <string name="username">Username</string>
     <string name="register">Register</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="caption">Caption</string>
+    <string name="view_all_comments"><u>View all comments</u></string>
 </resources>
