--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,9 @@
     <string name="register">Register</string>
     <string name="caption">Caption</string>
     <string name="view_all_comments"><u>View all comments</u></string>
+    <string name="title_activity_profile">ProfileActivity</string>
+    <string name="tab_text_1">My Posts</string>
+    <string name="tab_text_2">Voted</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
